client/styles/gallery.css
.gallery {
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
    -webkit-column-width: 33.4%;
    -moz-column-width: 33.3%;
    column-width: 33.3%;
    padding: 0 8px;
}

.gallery .pics {
    -webkit-transition: all 350ms ease;
    transition: all 350ms ease;
    cursor: pointer;
    margin-bottom: 8px;
    margin-left: -4px;
}

.gallery .pics:hover {
    filter: opacity(.9);
}

@media(max-width: 1000px) {
    .gallery {
        -webkit-column-count: 1;
        -moz-column-count: 1;
        column-count: 1;
    }
}

@media(max-width: 500px) {
    .gallery {
        -webkit-column-count: 1;
        -moz-column-count: 1;
        column-count: 1;
    }
}

